# BP_2026

./: README.md
Dokument/: BP_1_dokument.odt  moje_poznamky.txt
Dokument/Spaniel_bloky/: BER.txt  kanal.txt
Dokument/Tutorial/: Manualne_mazanie.txt  OOT_C++.txt  tutorial.txt  vzorce na BER.odt
Flowgraphs/: BER_Testovanie.grc  BER_Testovanie.py  Bpsk_stage1.grc  Kod_opakovanim.grc  Kod_opakovanim.py  Subory.grc  Subory.py  TeoretickyBER.grc  TeoretickyBER.py  Test3.grc  Test_1.grc  Test_1.py  Test_2.grc  Test_2.py  Variant_B_Hamming_Done(1).grc  app.py  b_BERTool.grc  b_BERTool.py  bertool_plus.grc  bpsk_stage1.py  ser_simulation.py  test.grc  test.py  variant_b_hamming.py  variant_b_hamming_epy_block_0.py  variant_b_hamming_epy_block_1.py
Nastroje/: README.txt  autobind.sh  installC.sh
Projekt/Archiv/: AWGN_kanal_impl.cc  BER_impl.cc
Projekt/PyGUI/: SetUpMenu.py
Projekt/PyGUI/GRBP/: pyvenv.cfg
Projekt/gr-ErTools/: CMakeLists.txt  MANIFEST.md
Projekt/gr-ErTools/.conda/: README.md
Projekt/gr-ErTools/apps/: CMakeLists.txt
Projekt/gr-ErTools/docs/: CMakeLists.txt  README.ErTools
Projekt/gr-ErTools/grc/: CMakeLists.txt  ErTools_AWGN.block.yml  (+13 more)
Projekt/gr-KodKal/: CMakeLists.txt  MANIFEST.md
Projekt/gr-tempPY/: CMakeLists.txt  MANIFEST.md
Projekt/gr-tempPY/python/tempPY/bindings/: CMakeLists.txt  ctest_python.cc  python_bindings.cc
Projekt/gr-tempPY/python/tempPY/bindings/docstrings/: ctest_pydoc_template.h
Projekt/gr-testing/: CMakeLists.txt  MANIFEST.md
Testing/: ByteTest.c  ByteTestEXE  byte  fill.cc  gauss.cc  linspace.c  test
(+149 files in other folders)
